# netlabs

./: README.md
ansible/: ansible.cfg  pyproject.toml
ansible/inventory/: 10-clab-wg-s2n  99-mikrotik_routeros  99-routeros  mikrotik_routeros.yml
ansible/inventory/group_vars/: routeros.yml
ansible/inventory/group_vars/mikrotik_routeros/: system_identity.yml  vars.yml  vault.yml
ansible/inventory/host_vars/clab-isis-s4n-a/: ip_address.yml  routing_isis.yml
ansible/inventory/host_vars/clab-isis-s4n-b/: ip_address.yml  routing_isis.yml
ansible/inventory/host_vars/clab-isis-s4n-c/: ip_address.yml  routing_isis.yml
ansible/inventory/host_vars/clab-isis-s4n-d/: ip_address.yml  routing_isis.yml
ansible/inventory/host_vars/clab-wg-s2n-n1/: ip_address.yml
ansible/inventory/host_vars/clab-wg-s2n-n2/: ip_address.yml
ansible/playbooks/: clab-isis-s4n.yml  clab-wg-s2n.yml
ansible/roles/mikrotik-routeros-common/: README.md
ansible/roles/mikrotik-routeros-common/defaults/: main.yml
ansible/roles/mikrotik-routeros-common/handlers/: main.yml
ansible/roles/mikrotik-routeros-common/tasks/: main.yml
ansible/roles/mikrotik-routeros-common/tests/: test.yml
ansible/roles/mikrotik-routeros-common/vars/: main.yml
ansible/roles/mikrotik-routeros-ip-address/: README.md
ansible/roles/mikrotik-routeros-ip-address/defaults/: main.yml
ansible/roles/mikrotik-routeros-ip-address/handlers/: main.yml
ansible/roles/mikrotik-routeros-ip-address/tasks/: main.yml
ansible/roles/mikrotik-routeros-ip-address/tests/: test.yml
clabs/isis-simple-4n/: isis-s4n.clab.yml
(+7 files in other folders)
