[project]
name = "netlabs-ansible"
version = "0.1.0"
description = ""
authors = [
    {name = "tomas.horyl@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "ansible (>=11.3.0,<12.0.0)",
    "paramiko (>=3.5.1,<4.0.0)",
    "librouteros (>=3.4.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
